# research-hub

./: CLAUDE.md  Cargo.toml  README.md
doc/: implementation-notes.md
src/: bibliography.rs  config.rs  download.rs  error.rs  lib.rs  main.rs  models.rs  search.rs
src/provider/: arxiv.rs  base_search.rs  biorxiv.rs  core_api.rs  crossref.rs  doaj.rs  google_books.rs  hathitrust.rs  mdpi.rs  mod.rs  open_library.rs  openalex.rs  openreview.rs  pubmed.rs  researchgate.rs  sci_hub.rs  semantic_scholar.rs  ssrn.rs  unpaywall.rs  zenodo.rs
