[package]
name = "research-hub"
version = "0.1.0"
edition = "2024"
description = "CLI tool and library for searching, downloading, and citing academic papers"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
scraper = "0.21"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
regex = "1"
async-trait = "0.1"
percent-encoding = "2"
unicode-normalization = "0.1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
